                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 18-02-2005 fixed: crash bug in thumbpanels when switching from large->small without resetting current focus.
  - 18-02-2005 added: LCD option for HD44780/KS0073 controllers
  - 17-02-2005 fixed: dialog select doesn't free its items when it is closed
  - 17-02-2005 fixed: black screen when going from visualisation -> other window -> press stop -> press back  
  - 17-02-2005 updated: Finnish language file (Thnx to jutski)
  - 16-02-2005 updated: German language file
  - 16-02-2005 updated: Norwegian language file (Thnx to vnmartinsen)
  - 16-02-2005 updated: Italian language file (Thnx to kotix)
  - 16-02-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 16-02-2005 fixed: Crash when going from FullScreenVideo -> other window -> press stop -> press back twice.
  - 16-02-2005 fixed: Crash bug in Thumbpanels + page number display.
  - 16-02-2005 cleanup: Video time/duration is all calculated in the infoManager now.
  - 16-02-2005 fixed: Lockups in blank dirs when hide parent folder item is on.
  - 15-02-2005 fixed: possible lock ups in video playlist and my programs when no ThumbnailPanel present
  - 15-02-2005 fixed: [ 1122417 ] Pressing pause after playing finished results in an exception
  - 15-02-2005 fixed: enable/disable "Repeat Folders" option only works after restart
  - 15-02-2005 fixed: More weather localization stuff.  New ids need translating: 388-393. Thanks to vnm.
  - 15-02-2005 fixed: [ 1122791 ] LCD: no display of current playbacktime while videoplayback
  - 15-02-2005 fixed: wrong display in the lcd of following asci characters: _ [ ] \