@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 18-02-2005 fixed: Localization of UV data in weather.
   - 18-02-2005 fixed: crash bug in thumbpanels when switching from large->small without resetting current focus.
   - 18-02-2005 added: LCD option for HD44780/KS0073 controllers
   - 17-02-2005 fixed: dialog select doesn't free its items when it is closed
